Boost gems and improve code styling

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ kramdown:
   # use Github Flavored Markdown
   input: GFM
   # do not replace newlines by <br>s
+  syntax_highlighter: rouge
   hard_wrap: false
 
 gems: ['jekyll-paginate', 'jekyll-twitter-plugin']
